# sEEGnal

./: .gitignore  .style.yapf  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
demo/scripts/: init.py  run_sEEGnal.py
demo/scripts/check_features/: check_write_read.py  plot_occipital_pow_spectrum.py
demo/scripts/power/: plot_power.py
demo/scripts/run_sEEGnal/: config.json  init.py  run_feature_extraction.py  run_sEEGnal.py  run_sources.py
dev/init/: config.json
dev/run/: run_sEEGnal.py
dev/validation/check_features/: plot_plv_matrix.py
dev/validation/check_source_reconstruction/: plot_atlas_slice.py  plot_forward_model.py  plot_source_alpha_activity.py
dev/validation/parameter_tuning/: plot_artifacts.py  plot_badchannels.py  run_artifacts_tuning.py  run_badchannel_tuning.py
dev/validation/power/: plot_power.py
dev/validation/prepare_eeg/: run_prepare_eeg.py
src/buildtools/: build_ext.py
src/sEEGnal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sEEGnal/feature_extraction/: estimate_rel_pow.py  feature_extraction.py
src/sEEGnal/io/: eep.py  read_bids_files.py  read_source_files.py  riff.py
src/sEEGnal/preprocess/: artifact_detection.py  badchannel_detection.py  find_artifacts.py  find_badchannels.py
src/sEEGnal/sources_reconstruction/: atlas.py  covariance.py  forward.py  inverse.py
src/sEEGnal/standardize/: standardize.py
src/sEEGnal/tools/: atlas_tools.py  bids_tools.py  bss.py  fc_tools.py  mne_tools.py  psd_tools.py  qc_tools.py  signal.py  spheres.py  template_tools.py  tools.py  tsv_tools.py
test/init/: config.json  init.py
test/run_sEEGnal/scripts/: config.json  run_sEEGnal.py
test/scripts/check_components/: find_comp_with_peaks.py  plot_power.py  run_check_components.py
test/scripts/check_features/: check_write_read.py  plot_occipital_pow_spectrum.py
test/scripts/check_source_reconstruction/: plot_forward_model.py  plot_occipital_pow_spectrum.py  topoplot_alpha_activity.py
test/scripts/power/: config.json  (+1 more)
(+30 files in other folders)
