[build-system]
requires = [
  "setuptools>=75",   # or newer
  "wheel",
  "numpy>=2.0"        # provides headers during build
]
build-backend = "setuptools.build_meta"

[project]
name = "sEEGnal"
version = "1.0.0"
description = "EEG signal pre-processing tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi==2025.10.5",
    "charset-normalizer==3.4.3",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "decorator==5.2.1",
    "flatbuffers==25.9.23",
    "fonttools==4.60.1",
    "humanfriendly==10.0",
    "idna==3.10",
    "Jinja2==3.1.6",
    "kiwisolver==1.4.9",
    "lazy_loader==0.4",
    "MarkupSafe==3.0.3",
    "matplotlib==3.10.6",
    "mne==1.10.1",
    "mne-bids==0.17.0",
    "mne-icalabel==0.8.0",
    "mpmath==1.3.0",
    "numpy==2.3.3",
    "onnxruntime==1.23.0",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==11.3.0",
    "platformdirs==4.4.0",
    "pooch==1.8.2",
    "protobuf==6.32.1",
    "psutil==7.1.0",
    "pybv==0.7.6",
    "pyparsing==3.2.5",
    "pyreadline3==3.5.4",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "requests==2.32.5",
    "scipy==1.16.2",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sympy==1.14.0",
    "tqdm==4.67.1",
    "tzdata==2025.2",
    "urllib3==2.5.0"
]


[tool.setuptools.packages.find]
where = ["src"]
include = ["sEEGnal*", "buildtools*"]

# Tell setuptools to use our custom build_ext that injects NumPy headers
[tool.setuptools]
cmdclass = { build_ext = "buildtools.build_ext.BuildExt" }

# --- C extensions ---
[[tool.setuptools.ext-modules]]
name = "sEEGnal.tools.auxsobi"
sources = ["src/sEEGnal/tools/auxsobi_src/auxsobi.c"]
include-dirs = ["src/sEEGnal/tools/auxsobi_src"]

[[tool.setuptools.ext-modules]]
name = "sEEGnal.io.raweep"
sources = ["src/sEEGnal/io/raweep_src/raweep.c"]
include-dirs = ["src/sEEGnal/io/raweep_src"]